Add curated PFP collection launches
